\name{diffHicnews}
\title{diffHic News}
\encoding{UTF-8}

\section{Version 1.4.0}{\itemize{
\item 
Deprecated DIList objects and methods in favour of InteractionSet objects.

\item
marginCounts() now returns a RangedSummarizedExperiment for all bins.

\item
Added the max.height argument to the rotPlaid() and rotDI() functions.

\item
Added the diClusters() function for post-hoc cluster-level FDR control.

\item
Added the annotatePairs() function for convenient annotation of (clusters of) interactions.

\item
Fixed a bug in plotPlaid() when the interaction space was empty.

\item
Fixed a bug in preparePairs() where unmapped chimeric segments led to the loss of the entire pair.

\item
Updated user's guide, documentation and tests.
}
}

\section{Version 1.2.0}{\itemize{
\item
Renamed normalize() to normOffsets().

\item
Added library size specification to DIList methods normOffsets(), asDGEList().

\item 
Fixed bugs under pathological settings in plotPlaid(), plotDI(), rotPlaid(), rotDI().

\item 
Optimized C++ code for connectCounts(), squareCounts().

\item 
Streamlined various R utilities used throughout all functions.

\item 
Added iter_map.py to inst/python, for iterative mapping of DNase Hi-C data.

\item
Added the neighborCounts() function, for simultaneous read counting and enrichment calculation.

\item
Added exclude for enrichedPairs(), to provide an exclusion zone in the local neighborhood.

\item
Switched default colour in rotPlaid(), plotPlaid() to black.

\item
Added compartmentalize() function to identify genomic compartments.

\item 
Added domainDirections() function to help identify domains.

\item
Modified correctedContact() to allow distance correction and report factorized probabilities directly.

\item 
Modified marginCounts() function for proper single-end-like treatment of Hi-C data.

\item
Extended clusterPairs() to merge bin pairs from multiple DILists.

\item