@@ -1,6 +1,6 @@
 
-R Under development (unstable) (2015-12-22 r69809) -- "Unsuffered Consequences"
-Copyright (C) 2015 The R Foundation for Statistical Computing
+R version 3.3.0 Patched (2016-05-03 r70580) -- "Supposedly Educational"
+Copyright (C) 2016 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -50,8 +50,8 @@ Type 'q()' to quit R.
 > 
 > checkCIGAR("5H20M", TRUE)
 Loading required package: Rsamtools
-Loading required package: XVector
 Loading required package: Biostrings
+Loading required package: XVector
   alen offset 
     20      0 
 > checkCIGAR("5H20M", FALSE)
@@ -197,7 +197,7 @@ In assign2fragment(starts, ends, 0L, 1000L, TRUE, 10L) :
 > 
 > suppressPackageStartupMessages(require("rhdf5"))
 > 
-> comp<-function (fname, npairs, max.cuts, sizes=c(100, 500), singles=0, rlen=10, spacer=rlen, pseudo=FALSE) {
+> comp<-function (fname, npairs, max.cuts, sizes=c(100, 500), singles=0, rlen=10, spacer=rlen, pseudo=FALSE, extras=NULL) {
 + 	rlen<-as.integer(rlen)
 + 	spacer<-as.integer(spacer)
 + 	if (min(sizes) <= rlen) { stop("min fragment must be greater than read length") } 
@@ -225,6 +225,13 @@ In assign2fragment(starts, ends, 0L, 1000L, TRUE, 10L) :
 + 		outfrags[[i]]<-GRanges(names(max.cuts)[i], IRanges(cut.starts[[i]], ends-spacer))
 + 		chromosomes[i]<-tail(ends, 1)-spacer;
 + 	}
++     if (!is.null(extras)) { # Editing it for error-checking purposes.
++         if (extras[1]==-1L) {
++             outfrags <- outfrags[-1]
++         } else {
++             outfrags <- c(outfrags, list(GRanges(extras, IRanges(1, sizes[1]))))
++         }
++     }
 + 	suppressWarnings(outfrags<-do.call(c, outfrags))
 + 	names(chromosomes)<-names(max.cuts)
 + 	names(fragments)<-names(max.cuts)
@@ -739,7 +746,7 @@ In assign2fragment(starts, ends, 0L, 1000L, TRUE, 10L) :
 5          4          1     73           3    793
 6          4          1    160           0    726
 > 
-> max.cuts<-c(chrD=5L, chrC=6L, chrA=7L, chrE=4L, chrG=3L, chrB=1L, chrF=2L) # Shuffled.
+> max.cuts<-c(chrD=5L, chrC=6L, chrA=7L, chrE=4L, chrG=3L, chrB=1L, chrF=2L) # Shuffled, to test effect of non-trivial 'm'.
 > comp(fname, npairs=200, size=c(500, 1000), max.cuts=max.cuts)
   anchor1.id anchor2.id length orientation insert
 1         16         12    851           0   3432
@@ -844,6 +851,31 @@ In assign2fragment(starts, ends, 0L, 1000L, TRUE, 10L) :
 4         32         31    147           2    873
 5         32         31    429           1    429
 6         32         31    596           1    596
+> 
+> # Checking what happens when I add more or less chromosomes 
+> 
+> max.cuts<-c(chrA=20L, chrB=10L)
+> comp(fname, npairs=20, max.cuts=max.cuts, spacer=0, sizes=c(100, 100), extras="chrX") # should work
+  anchor1.id anchor2.id length orientation insert
+1          4          3     99           3     79
+2         10          6    145           0    355
+3         13          7     93           0    541
+4         17          7     98           2   1022
+5         18         10    168           0    806
+6         19          6    123           1   1323
+> comp(fname, npairs=20, max.cuts=max.cuts, spacer=0, sizes=c(100, 100), extras="chrX", pseudo=TRUE)
+  anchor1.id anchor2.id length orientation insert
+1         15         12    111           3    309
+> try({
++     comp(fname, npairs=20, max.cuts=max.cuts, spacer=0, sizes=c(100, 100), extras=-1L) # should be okay
++ })
+Error in preparePairs(out, param, tmpdir, output.dir = file.path(dir,  : 
+  missing chromosomes in cut site list
+> try({
++     comp(fname, npairs=20, max.cuts=max.cuts, spacer=0, sizes=c(100, 100), extras=-1L, pseudo=TRUE)
++ })
+Error in prepPseudoPairs(out, param, tmpdir, output.dir = file.path(dir,  : 
+  missing chromosomes in cut site list
 > 
 > ###################################################################################################
 > # Trying to do simulations with chimeras is hellishly complicated, so we're just going to settle for 
@@ -1242,6 +1274,7 @@ other.2                  7          7     30           2     13
 + }
 > fout <- file.path(dir, "umap.sam")
 > 
+> # None of these should show up as a pair.
 > for (scenario in list(list("*", "*", "*", "*"),
 +                       list("5M5H", "*", "*", "*"),
 +                       list("*", "*", "5M5H", "*"),
@@ -1257,6 +1290,7 @@ other.2                  7          7     30           2     13
 +     stopifnot(x$chimeras[["mapped"]]==0L)
 + }
 > 
+> # All of these should show up as a pair.
 > writeLines(generator("5M5H", "*", "5M5H", "*"), con=fout)
 > sout <- Rsamtools::asBam(fout, file.path(dir, "umap"), overwrite=TRUE)
 > x <- preparePairs(sout, param=pairParam(GRanges("chrA", IRanges(c(1, 71), c(70, 200)))), file=file.path(dir, "whee.h5"))
@@ -1288,4 +1322,4 @@ other.2                  7          7     30           2     13
 > 
 > proc.time()
    user  system elapsed 
- 15.223   0.512  15.769 
+ 15.542   0.704  16.284 
