@@ -2,6 +2,11 @@
 \title{diffHic News}
 \encoding{UTF-8}
 
+\section{Version 1.5.1}{\itemize{
+\item Relaxed checks in preparePairs(), prepPseudoPairs() when more chromosomes are supplied than needed.
+}
+}
+
 \section{Version 1.4.0}{\itemize{
 \item 
 Deprecated DIList objects and methods in favour of InteractionSet objects.
